Fixed the spacing between main content and footer

--- a/hew5/public/css/style.scss
+++ b/hew5/public/css/style.scss
@@ -171,15 +171,29 @@ $fullwidth: 100%;
     }
 }
 
-.main-content {
-    min-height: 800px;
+@media screen and (min-width: 768px) {
+    .main-content {
     margin-top: -10px;    /* can minimize the gap when scrolling up and down */
-    margin-bottom: 40px;
+    padding-bottom: 200px;
     width: 100%;
     background-color: $maincolor1;
     position: relative;
     z-index: 1;
+  }
 }
+
+@media screen and (max-width: 767px) {
+    .main-content {
+    margin-top: -10px;    /* can minimize the gap when scrolling up and down */
+    padding-bottom: 50px;
+    width: 100%;
+    background-color: $maincolor1;
+    position: relative;
+    z-index: 1;
+  }
+}
+
+
 
 @media screen and (min-width: 768px) {
     .main-content {
@@ -312,8 +326,7 @@ label {
 ***      ***/
 
 .footer {
-  margin:20px auto;
-  // height:40px;
+  margin:0px auto;
   padding:20px;
   text-align: center;
   font-size: 0.8em;
